M_380_InsertDeleteGetRandomO1